correction in publish page signal list alignment

--- a/src/components/@shared/atoms/Tabs2/index.module.css
+++ b/src/components/@shared/atoms/Tabs2/index.module.css
@@ -59,6 +59,7 @@
 
 .assetListTitleName svg {
   margin-right: 0.5rem;
+  margin-left: auto;
 }
 
 .assetListIcon {
