--- a/src/components/Settings/History/index.module.css
+++ b/src/components/Settings/History/index.module.css
@@ -46,6 +46,9 @@
   max-width: fit-content;
 }
 
+.generalDetails li:first-child {
+}
+
 .generalDetails > * > * {
   display: flex;
   justify-content: flex-start;
